--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "Simpleprompt",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "load-grunt-tasks": "^0.6.0"
+    "load-grunt-tasks": "^0.6.0",
+    "grunt-jscs": "^1.5.0"
   }
 }
