--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
   "name": "Simpleprompt",
   "version": "2.2.1",
+  "main": "src/prompt.js",
   "devDependencies": {
+    "chai": "^3.5.0",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs": "^1.5.0",
+    "istanbul": "^0.4.4",
+    "jsdom": "^9.4.1",
     "load-grunt-tasks": "^0.6.0",
     "grunt-jscs": "^1.5.0"
+    "mocha": "^2.5.3"
+  },
+  "scripts": {
+    "test": "mocha --reporter spec",
+    "coverage": "istanbul cover _mocha -- -R spec",
+    "coverageReport": "npm run coverage && open coverage/lcov-report/*.html"
   }
 }
