--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^1.5.0",
+    "grunt-sass": "^1.2.0",
     "istanbul": "^0.4.4",
     "jsdom": "^9.4.1",
     "load-grunt-tasks": "^0.6.0",
-    "grunt-jscs": "^1.5.0"
     "mocha": "^2.5.3"
   },
   "scripts": {
