--- a/.jshintrc
+++ b/.jshintrc
@@ -66,7 +66,7 @@
 	"couch"			: false,	// CouchDB
 	"devel"			: false,	// Development/debugging (alert, confirm, etc)
 	"dojo"			: false,	// Dojo Toolkit
-	"jquery"		: true,		// jQuery
+	"jquery"		: false,		// jQuery
 	"mootools"		: false,	// MooTools
 	"node"			: true,		// Node.js
 	"nonstandard"	: false,	// Widely adopted globals (escape, unescape, etc)
@@ -75,6 +75,7 @@
 	"worker"		: false,	// Web Workers
 	"wsh"			: false,	// Windows Scripting Host
 	"yui"			: false,	// Yahoo User Interface
+	"mocha"         : true,
 
 	// Legacy
 	"nomen"			: true,		// true: Prohibit dangling `_` in variables
