--- a/package.json
+++ b/package.json
@@ -1,10 +1,33 @@
 {
-  "name": "Simpleprompt",
+  "name": "simpleprompt",
   "version": "2.2.1",
+  "description": "Simple custom dialog prompts based on jQuery.",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dbrekalo/simpleprompt"
+  },
+  "keywords": [
+    "prompt",
+    "dialog"
+  ],
   "main": "src/prompt.js",
+  "scripts": {
+    "build": "npm test && grunt build",
+    "watch": "grunt build && grunt watch",
+    "bump:patch": "grunt bump:patch",
+    "bump:minor": "grunt bump:minor",
+    "bump:major": "grunt bump:major",
+    "test": "mocha --reporter spec",
+    "coverage": "istanbul cover _mocha -- -R spec",
+    "coverageReport": "npm run coverage && open coverage/lcov-report/*.html",
+    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "grunt": "^0.4.5",
+    "grunt-bump": "^0.7.0",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
@@ -16,9 +39,7 @@
     "load-grunt-tasks": "^0.6.0",
     "mocha": "^2.5.3"
   },
-  "scripts": {
-    "test": "mocha --reporter spec",
-    "coverage": "istanbul cover _mocha -- -R spec",
-    "coverageReport": "npm run coverage && open coverage/lcov-report/*.html"
+  "dependencies": {
+    "jquery": ">=1.11"
   }
 }
