--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "devDependencies": {
+    "bourbon": "^4.2.7",
     "chai": "^3.5.0",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.7.0",
