--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "bourbon": "^4.2.7",
     "chai": "^3.5.0",
+    "coveralls": "^2.11.11",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.7.0",
     "grunt-cli": "^0.1.13",
